修正点赞服务JWT配置
